# agent-incident-relay-mcp

./: .gitignore  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
agent_incident_relay_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_relay.py  test_server.py
