[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-incident-relay-mcp"
version = "1.0.1"
description = "Agent Incident Relay MCP — Article 73 5-clock broadcaster. One incident → simultaneous signed reports to EU AI Act Art 73, DORA Art 19, NIS2 Art 23, GDPR Art 33, ISO 42001 cl 10.1. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "compliance", "incident-reporting", "eu-ai-act", "dora", "nis2", "gdpr", "iso-42001", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/a2a"
Repository = "https://github.com/CSOAI-ORG/agent-incident-relay-mcp"

[project.scripts]
agent-incident-relay-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
